[package]
name = "actix-xml"
version = "0.2.0-beta.0"
authors = ["LightQuantum <self@lightquantum.me>"]
description = "XML extractor for actix-web"
edition = "2018"
repository = "https://github.com/PhotonQuantum/actix-xml"
readme = "README.md"
license = "MIT"
keywords = ["actix", "xml", "parser", "parsing", "extractor"]
categories = ["parsing", "text-processing", "encoding", "web-programming", "web-programming::http-server"]
exclude = [
    ".github/*",
    ".mergify.yml",
    "rust-toolchain.toml",
]

[features]
default = ["compress"]
compress = []
encoding = ["quick-xml/encoding"]

[dependencies]
actix-web = { version = "4.0.0-beta.8", default-features = false }
quick-xml = { version = "0.22", features = ["serialize"] }
serde = "1.0"
thiserror = "1.0"
mime = "0.3"
futures = "0.3"
log = "0.4"

[dev-dependencies]
actix-web = { version = "4.0.0-beta.8" }
serde = { version = "1.0", features = ["derive"] }
actix-rt = "2.2"